fix hero image vert align

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ nav a:hover {
 .hero {
     background-image: url("../images/header.jpg"), linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2));
     background-blend-mode: screen;
-    background-position: center top;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     line-height: 1.2;
